Changed color of content-section and layout of posts and forms

--- a/accounts/templates/accounts/_account_header.html
+++ b/accounts/templates/accounts/_account_header.html
@@ -1,8 +1,8 @@
 <div class="col-12 mb-2">
     {% if user.profile.image %}
-        <img class="profile-pic" src="{{ user.profile.image.url }}">
+        <img class="accounts-profile-pic" src="{{ user.profile.image.url }}">
     {% else %}
-        <img class="profile-pic" src="/media/default.jpg">
+        <img class="accounts-profile-pic" src="/media/default.jpg">
     {% endif %}
 </div>
 <div class="col-12">
