--- a/posts/templates/posts/edit_post.html
+++ b/posts/templates/posts/edit_post.html
@@ -13,7 +13,7 @@
             <button class="btn btn-success" type="submit">
                 Update
             </button>
-            <a href="{% url 'posts:view_post' post.slug %}" class="btn btn-secondary">
+            <a href="{% url 'posts:home' %}" class="btn btn-secondary">
                 Cancel
             </a>
         </div>
