--- a/accounts/templates/accounts/view_update_account.html
+++ b/accounts/templates/accounts/view_update_account.html
@@ -4,25 +4,28 @@
     {{ user.username }} Info
 {% endblock title %}
 {% block content %}
-    <div class="content-section">
-        <div class="row text-center mb-4">
-            {% include "accounts/_account_header.html" %}
+    <div class="content-section row">
+        <div class="col-12 text-center">
+                {% include "accounts/_account_header.html" %}
+
         </div>
-        <h3 class="text-center py-2">Personal Information</h3>
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                {{ user_form|crispy }}
-                {{ profile_form|crispy }}
-            </fieldset>
-            <fieldset class="form-group">
-                Password:<br>You can change your password through this <a href="{% url 'change_password' %}">form</a>.
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-success" type="submit">
-                    Update
-                </button>
-            </div>
-        </form>
+        <div class="col-12">
+            <h3 class="text-center py-2">Personal Information</h3>
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                    {{ user_form|crispy }}
+                    {{ profile_form|crispy }}
+                </fieldset>
+                <fieldset class="form-group">
+                    Password:<br>You can change your password through this <a href="{% url 'change_password' %}">form</a>.
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-success" type="submit">
+                        Update
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 {% endblock content %}
