--- a/base/static/style.css
+++ b/base/static/style.css
@@ -23,19 +23,22 @@ body {
 
 }
 
-.post-meta,
-.post-meta a {
-    color: #147AFF;
-}
-
 .post-author a {
     color: #37546C;
     font-weight: bold;
 }
 
+.post-author a:hover {
+    color: #486F8E;
+}
+
 .post-title a {
-    color: #474D52;
+    color: #51575D;
     font-weight: bold;
+}
+
+.post-title a:hover {
+    color: #050505;
 }
 
 .sidebar-post-title {
@@ -80,6 +83,12 @@ a.post-edit:hover {
     color: #491CFD;
 }
 
+.sidebar-header {
+    color: #16222C;
+    font-weight: bold;
+    border-bottom: 2px solid #16222C;
+}
+
 
 /******************* #Responsiveness# ******************/
 h1 { font-size: 1.8rem; }
@@ -99,6 +108,12 @@ tr { font-size: 1rem; }
     width: 50px;
     height: 50px;
 }
+
+.comments-profile-pic {
+    width: 30px;
+    height: 30px;
+}
+
 @media screen and (max-width: 320px) {
     html { font-size: 70%; }
     .accounts-profile-pic { width: 60px; height: 60px;}
@@ -112,6 +127,7 @@ tr { font-size: 1rem; }
 }
 @media screen and (max-width: 576px)
 {
+    html { padding-top: 45px; }
     .content-section { border-bottom: 1px solid #ADB3B8; padding: 15px 10px; }
 }
 @media screen and (min-width: 577px) {
