--- a/posts/templates/posts/_comment_base.html
+++ b/posts/templates/posts/_comment_base.html
@@ -1,27 +1,28 @@
 <div class="row">
+    <div class="col-auto pr-0">
+        <a href="{% url 'accounts:view_account' post.user.profile.slug %}">
+            {% if user.profile.image %}
+                <img class="rounded-circle comments-profile-pic" src="{{ post.user.profile.image.url }}">
+            {% else %}
+                <img class="posts-profile-pic" src="/media/default.jpg">
+            {% endif %}
+        </a>
+    </div>
+    <div class="float-right pl-0">
+        <div class="col-12 post-author">
+            <a href="{% url 'accounts:view_account' post.user.profile.slug %}">
+                {{ post.user.username }}
+            </a>
+        </div>
+    </div>
     <div class="col-12">
-        {{ comment.body }}
+        <p class="post-body">
+            {{ comment.body }}
+        </p>
     </div>
     <div class="col-12 text-right">
-        <small>
-            By: 
-            <span class="post-meta">
-                <a href="{% url 'accounts:view_account' comment.author.profile.slug %}">
-                    {% if comment.author == request.user %}
-                        You
-                    {% else %}
-                        {{ comment.author }}
-                    {% endif %}
-                </a>
-            </span>
-        </small>
-    </div>
-    <div class="col-12 text-right">
-        <small>
-            At: 
-            <span class="post-meta">
-                {{ comment.date_posted }}
-            </span>
+        <small class="text-muted">
+            {{ comment.date_posted|date:"g:i A - d M Y" }}
         </small>
     </div>
 </div>
