--- a/posts/templates/posts/delete_post_confirm.html
+++ b/posts/templates/posts/delete_post_confirm.html
@@ -3,15 +3,17 @@
     Delete {{ post.title }}
 {% endblock title %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <legend class="border-bottom mb-2">Delete Post</legend>
-            <fieldset class="form-group">
-                <h2 class="pb-4">Are you sure you want to delete "{{ post.title }}"</h2>
-                <button class="btn btn-danger" type="submit">Delete</button>
-                <a class="btn btn-primary" href="{% url 'posts:home' %}">Cancel</a>
-            </fieldset>
-        </form>
+    <div class="content-section row">
+        <div class="col-12 pr-1 pl-1">
+            <form method="POST">
+                {% csrf_token %}
+                <legend class="border-bottom mb-2">Delete Post</legend>
+                <fieldset class="form-group">
+                    <h2 class="pb-4">Are you sure you want to delete "{{ post.title }}"</h2>
+                    <button class="btn btn-danger" type="submit">Delete</button>
+                    <a class="btn btn-primary" href="{% url 'posts:home' %}">Cancel</a>
+                </fieldset>
+            </form>
+        </div>
     </div>
 {% endblock content %}
