--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -35,11 +35,11 @@
         </div>
         <div class="col-sm-4 pr-1 pl-1 pl-sm-2 sidebar">
             <ul class="list-group">
-                <li class="list-group-item text-center">Most Commented Posts</li>
+                <li class="list-group-item text-center sidebar-header">Most Commented Posts</li>
                 {% for post in most_popular_posts %}
                     <li class="list-group-item">
                         <div class="row">
-                            <div class="col-12">
+                            <div class="col-12 post-title">
                                 <a class="sidebar-post-title" href="{% url 'posts:view_post' post.slug %}">
                                     {{ post.title }}
                                 </a>
@@ -49,7 +49,7 @@
                                     {{ post.comments.count }} comments
                                 </small>
                             </div>
-                            <div class="col-12 text-right">
+                            <div class="col-12 text-right post-author">
                                 <small>
                                     <a class="text-right" href="{% url 'accounts:view_account' post.user.profile.slug %}">
                                         {{ post.user }}
