--- a/posts/templates/posts/delete_post_confirm.html
+++ b/posts/templates/posts/delete_post_confirm.html
@@ -7,11 +7,10 @@
         <div class="col-12 pr-1 pl-1">
             <form method="POST">
                 {% csrf_token %}
-                <legend class="border-bottom mb-2">Delete Post</legend>
-                <fieldset class="form-group">
-                    <h2 class="pb-4">Are you sure you want to delete "{{ post.title }}"</h2>
-                    <button class="btn btn-danger" type="submit">Delete</button>
-                    <a class="btn btn-primary" href="{% url 'posts:home' %}">Cancel</a>
+                <fieldset class="form-group text-center">
+                    <h4 class="pb-4">Are you sure you want to delete "{{ post.title }}"</h4>
+                    <button class="btn btn-outline-danger btn-sm" type="submit">Delete</button>
+                    <a class="btn btn-outline-secondary btn-sm" href="{% url 'posts:home' %}">Cancel</a>
                 </fieldset>
             </form>
         </div>
