--- a/posts/templates/posts/edit_post.html
+++ b/posts/templates/posts/edit_post.html
@@ -12,10 +12,10 @@
                     {{ form|crispy }}
                 </fieldset>
                 <div class="form-group text-center">
-                    <button class="btn btn-success" type="submit">
+                    <button class="btn btn-outline-info btn-sm" type="submit">
                         Update
                     </button>
-                    <a href="{% url 'posts:home' %}" class="btn btn-secondary">
+                    <a href="{% url 'posts:home' %}" class="btn btn-outline-secondary btn-sm">
                         Cancel
                     </a>
                 </div>
