Increased the width of the change password page

--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -4,16 +4,18 @@
     Password Change
 {% endblock title %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <Legend class="border-bottom pb-2 mb-4">Change Password</Legend>
-            <fieldset class="form-group">
-                {{ form|crispy }}
-            </fieldset>
-            <button type="submit" class="btn btn-info">
-                Change Password
-            </button>
-        </form>
+    <div class="content-section row">
+        <div class="col-12 pr-1 pl-1">
+            <form method="POST">
+                {% csrf_token %}
+                <Legend class="border-bottom pb-2 mb-4">Change Password</Legend>
+                <fieldset class="form-group">
+                    {{ form|crispy }}
+                </fieldset>
+                <button type="submit" class="btn btn-info">
+                    Change Password
+                </button>
+            </form>
+        </div>
     </div>
 {% endblock content %}
