Changed the change password button to outline

--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -12,7 +12,7 @@
                 <fieldset class="form-group">
                     {{ form|crispy }}
                 </fieldset>
-                <button type="submit" class="btn btn-info">
+                <button type="submit" class="btn btn-outline-info">
                     Change Password
                 </button>
             </form>
