--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -4,7 +4,7 @@
     Password Change
 {% endblock title %}
 {% block content %}
-    <div class="content-section row">
+    <div class="content-section row long-page">
         <div class="col-12 pr-1 pl-1">
             <form method="POST">
                 {% csrf_token %}
