--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -4,7 +4,7 @@
     Log In
 {% endblock title %}
 {% block content %}
-    <div class="content-section">
+    <div class="content-section logged-out">
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
