--- a/base/static/style.css
+++ b/base/static/style.css
@@ -1,6 +1,6 @@
 html {
     font-size: 80%;
-    padding-top: 60px;
+    padding-top: 47px;
 }
 
 body {
@@ -91,6 +91,16 @@ a.post-edit:hover {
     border-bottom: 2px solid #16222C;
 }
 
+.long-page {
+    min-height: 100vh;
+}
+
+.logged-out {
+    border-radius: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
 
 /******************* #Responsiveness# ******************/
 h1 { font-size: 1.8rem; }
@@ -100,21 +110,9 @@ h4 { font-size: 1.2rem; }
 tr { font-size: 1rem; }
 .navbar-toggler  .navbar-toggler-icon {font-size: 0.5rem; }
 .dropdown-menu .dropdown-item { font-size: 0.6rem; }
-.accounts-profile-pic {
-    width: 100px;
-    height: 100px;
-    border-radius: 5px;
-    border: 2px solid #0E150F;
-}
-.posts-profile-pic {
-    width: 50px;
-    height: 50px;
-}
-
-.comments-profile-pic {
-    width: 30px;
-    height: 30px;
-}
+.accounts-profile-pic { width: 100px; height: 100px; }
+.posts-profile-pic { width: 50px; height: 50px; }
+.comments-profile-pic { width: 30px; height: 30px; }
 
 @media screen and (max-width: 320px) {
     html { font-size: 70%; }
@@ -129,7 +127,7 @@ tr { font-size: 1rem; }
 }
 @media screen and (max-width: 576px)
 {
-    html { padding-top: 45px; }
+    html { padding-top: 37px; }
     .content-section { border-bottom: 1px solid #ADB3B8; padding: 15px 10px; }
 }
 @media screen and (min-width: 577px) {
