--- a/posts/templates/posts/edit_post.html
+++ b/posts/templates/posts/edit_post.html
@@ -4,7 +4,7 @@
     Edit {{ post.title }}
 {% endblock title %}
 {% block content %}
-    <div class="content-section row">
+    <div class="content-section row long-page">
         <div class="col-12 pr-1 pl-1">
             <form method="POST">
                 {% csrf_token %}
