--- a/accounts/templates/accounts/view_account.html
+++ b/accounts/templates/accounts/view_account.html
@@ -4,26 +4,37 @@
     {{ user.username }}
 {% endblock title %}
 {% block content %}
-    <div class="row text-center mb-4 account-page">
-        {% include "accounts/_account_header.html" %}
-        <div class="col-12">
-            <a href="{% url 'accounts:view_following_or_followers' slug=user.profile.slug req='following' %}">Following</a>
-        </div>
-        <div class="col-12">
-            <a href="{% url 'accounts:view_following_or_followers' slug=user.profile.slug req='followers' %}">Followers</a>
-        </div>
-    </div>
-    <div class="text-center mb-4">
-        {% if user != request.user %}
-            {% if is_following %}
-                <a href="{% url 'accounts:follow_profile' slug=user.profile.slug operation='unfollow' %}" class="btn btn-danger">Unfollow</a>
+    <div class="row account-header text-center">
+        <div class="col-12 mb-2">
+            {% if user.profile.image %}
+                <img class="accounts-profile-pic" src="{{ user.profile.image.url }}">
             {% else %}
-                <a href="{% url 'accounts:follow_profile' slug=user.profile.slug  operation='follow' %}" class="btn btn-primary">Follow</a>
+                <img class="accounts-profile-pic" src="/media/default.jpg">
             {% endif %}
-        {% endif %}
+        </div>
+        <div class="col-12 fullname pb-2 username">
+            <a href="{% url 'accounts:view_account' user.profile.slug %}">
+                {{ user.get_full_name }} (@{{ user.username }})
+            </a>
+        </div>
+        <div class=" col-12 text-center pb-3">
+            {% if user != request.user %}
+                {% if is_following %}
+                    <a href="{% url 'accounts:follow_profile' slug=user.profile.slug operation='unfollow' %}" class="btn btn-danger btn-sm">Unfollow</a>
+                {% else %}
+                    <a href="{% url 'accounts:follow_profile' slug=user.profile.slug  operation='follow' %}" class="btn btn-success btn-sm">Follow</a>
+                {% endif %}
+            {% endif %}
+        </div>
+        <div class="col-12">
+            <a href="{% url 'accounts:view_following_or_followers' slug=user.profile.slug req='following' %}">Following List</a>
+        </div>
+        <div class="col-12 mb-2">
+            <a href="{% url 'accounts:view_following_or_followers' slug=user.profile.slug req='followers' %}">Followers List</a>
+        </div>
     </div>
     <div class="row">
-        {% if posts %}
+            {% if posts %}
             <div class="col-12 pr-1 pl-1">
                 {% for post in posts %}
                     {% include "posts/_post_base.html" %}
