--- a/accounts/templates/accounts/view_update_account.html
+++ b/accounts/templates/accounts/view_update_account.html
@@ -6,7 +6,19 @@
 {% block content %}
     <div class="content-section row">
         <div class="col-12 text-center">
-            {% include "accounts/_account_header.html" %}
+            <div class="col-12 mb-2">
+                {% if user.profile.image %}
+                    <img class="accounts-profile-pic" src="{{ user.profile.image.url }}">
+                {% else %}
+                    <img class="accounts-profile-pic" src="/media/default.jpg">
+                {% endif %}
+            </div>
+            <div class="col-12 fullname-info">
+                {{ user.get_full_name }}
+            </div>
+            <div class="col-12 username-info">
+                <a href="{% url 'accounts:view_account' user.profile.slug %}">@{{ user.username }}</a>
+            </div>
         </div>
         <div class="col-12">
             <h3 class="text-center py-2">Personal Information</h3>
