--- a/posts/templates/posts/edit_post.html
+++ b/posts/templates/posts/edit_post.html
@@ -15,9 +15,7 @@
                     <button class="btn btn-outline-info btn-sm" type="submit">
                         Update
                     </button>
-                    <a href="{% url 'posts:home' %}" class="btn btn-outline-secondary btn-sm">
-                        Cancel
-                    </a>
+                    <input class="btn btn-outline-secondary btn-sm" action="action" type="button" value="Cancel" onclick="window.history.go(-1); return false;">
                 </div>
             </form>
         </div>
