Fixed forms legends border-bottom color and spaces

--- a/accounts/templates/accounts/change_password.html
+++ b/accounts/templates/accounts/change_password.html
@@ -8,7 +8,7 @@
         <div class="col-12 pr-1 pl-1">
             <form method="POST">
                 {% csrf_token %}
-                <Legend class="border-bottom pb-2 mb-4">Change Password</Legend>
+                <Legend class="pb-2 mb-4">Change Password</Legend>
                 <fieldset class="form-group">
                     {{ form|crispy }}
                 </fieldset>
