--- a/accounts/templates/accounts/password_reset_confirm.html
+++ b/accounts/templates/accounts/password_reset_confirm.html
@@ -8,7 +8,7 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-2">Reset Your Password</legend>
+                <legend class="pb-2 mb-2">Reset Your Password</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
