--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -8,8 +8,8 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom pb-2">
-                    Join <span class="site-name">Post It</span> today!
+                <legend class="pb-2 mb-4">
+                    Join <span class="site-name">Post It</span> today
                 </legend>
                 {{ form|crispy }}
             </fieldset>
