--- a/base/static/style.css
+++ b/base/static/style.css
@@ -145,6 +145,10 @@ a.post-edit:hover {
     color: #4C4F52;
 }
 
+legend {
+    border-bottom: 1px solid #A9B3BC;
+}
+
 /******************* #Responsiveness# ******************/
 h1 { font-size: 1.8rem; }
 h2 { font-size: 1.6rem; }
@@ -170,7 +174,6 @@ tr { font-size: 1rem; }
 }
 @media screen and (max-width: 576px)
 {
-    html { padding-top: 40px; }
     .content-section { border-bottom: 1px solid #ADB3B8; padding: 15px 10px; }
 }
 @media screen and (min-width: 577px) {
