Fixed typo in user creation page

--- a/accounts/templates/accounts/account_created.html
+++ b/accounts/templates/accounts/account_created.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="content-section">
         <h2 class="text-center">
-            Your account has been successfully creaeted. Please verify your e-mail to be able to sign in.
+            Your account has been successfully created. Please verify your e-mail to be able to sign in.
         </h2>
     </div>
 {% endblock content %}
