Fixed profile image bug

--- a/accounts/templates/accounts/view_update_account.html
+++ b/accounts/templates/accounts/view_update_account.html
@@ -8,7 +8,7 @@
         <div class="col-12 text-center mb-4">
             <div class="col-12 mb-2">
                 {% if user.profile.image %}
-                    <img class="accounts-profile-pic" src="{{ user.profile.image.url }}">
+                    <img class="accounts-profile-pic" src="{{ user.profile.image_url }}">
                 {% else %}
                     <img class="accounts-profile-pic" src="/media/default.jpg">
                 {% endif %}
