--- a/accounts/templates/accounts/view_account.html
+++ b/accounts/templates/accounts/view_account.html
@@ -7,7 +7,7 @@
     <div class="row account-header text-center">
         <div class="col-12 mb-2">
             {% if user.profile.image %}
-                <img class="accounts-profile-pic" src="{{ user.profile.image.url }}">
+                <img class="accounts-profile-pic" src="{{ user.profile.image_url }}">
             {% else %}
                 <img class="accounts-profile-pic" src="/media/default.jpg">
             {% endif %}
