--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -62,7 +62,9 @@
                     {% endfor %}
                 {% else %}
                         <li class="list-group-item">
-                            There are no posts in the site yet.
+                            <div class="text-center">
+                                There are no posts in the site yet.
+                            </div>
                         </li>
                 {% endif %}
             </ul>
