--- a/base/templates/error_403.html
+++ b/base/templates/error_403.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 {% block title %}
-    Error 404
+    Error 403 Forbidden
 {% endblock title %}
 {% block content %}
     <div class="content-section text-center text-danger pr-1 pl-1">
-        <h2>Error 404! Page Not Found!</h2>
-        <h3>The page you have requested does not exist.</h3>
+        <h2>Error 403! Forbidden!</h2>
+        <h3>You do not have permission to access this page.</h3>
     </div>
 {% endblock content %}
