--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -18,7 +18,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'accounts:view_update_account' %}">
-                                Account Info
+                                Account
                             </a>
                         </li>
                         <li class="nav-item">
