Added a new post form in the logged in user's account page

--- a/accounts/templates/accounts/followers.html
+++ b/accounts/templates/accounts/followers.html
@@ -12,7 +12,7 @@
                     </a>
                 </span>
                 <span>
-                    Followers List
+                    Followers
                 </span>
             </li>
             {% if followers_list %}
