--- a/accounts/templates/accounts/following.html
+++ b/accounts/templates/accounts/following.html
@@ -12,7 +12,7 @@
                     </a>
                 </span>
                 <span>
-                    Following List
+                    Following
                 </span>
             </li>
             {% if following_list %}
