--- a/posts/templates/posts/delete_post_confirm.html
+++ b/posts/templates/posts/delete_post_confirm.html
@@ -4,11 +4,20 @@
 {% endblock title %}
 {% block content %}
     <div class="content-section row long-page">
-        <div class="col-12 pr-1 pl-1">
+        <div class="col-12 pt-4 pr-1 pl-1">
             <form method="POST">
                 {% csrf_token %}
                 <fieldset class="form-group text-center">
-                    <h4 class="pb-4">Are you sure you want to delete "{{ post.title }}"</h4>
+                    <h4 class="text-danger pb-4">
+                        <span>
+                            Are you sure you want to delete the below post?
+                        </span>
+                        <span class="post-title">
+                            <a class="post-title" href="{% url 'posts:view_post' post.slug %}">
+                                {{ post.title }}
+                            </a>
+                        </span>
+                    </h4>
                     <button class="btn btn-outline-danger btn-sm" type="submit">Delete</button>
                     <input class="btn btn-outline-secondary btn-sm" action="action" type="button" value="Cancel" onclick="window.history.go(-1); return false;">
                 </fieldset>
