--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -6,20 +6,7 @@
 {% block content %}
     <div class="row home-page">
         <div class="col-sm-8 pr-1 pl-1">
-            <form method="POST" class="mb-4">
-                {% csrf_token %}
-                <div class="input-group mb-1">
-                    {{ form.title }}
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-info" type="submit">
-                            Post
-                        </button>
-                    </div>
-                </div>
-                <div class="form-group new-post">
-                    {{ form.body }}
-                </div>
-            </form>
+            {% include "posts/_new_post_form.html" %}
             {% if posts %}
                 {% for post in posts %}
                     {% include "posts/_post_base.html" %}
