--- a/posts/templates/posts/_paginations.html
+++ b/posts/templates/posts/_paginations.html
@@ -1,19 +1,31 @@
-<div class="pagination">
-    {% if page.has_previous %}
-        <a class="btn btn-outline-info my-2 mr-1" href="?page=1">First</a>
-        <a class="btn btn-outline-info my-2 mr-1" href="?page={{ page.previous_page_number }}">Previous</a>
-    {% endif %}
-    
-    {% for num in page.paginator.page_range %}
-        {% if page.number == num %}
-            <a class="btn btn-info my-2 mr-1" href="?page={{ num }}">{{ num }}</a>
-        {% elif num > page.number|add:'-3' and num < page.number|add:'3' %}
-            <a class="btn btn-outline-info my-2 mr-1" href="?page={{ num }}">{{ num }}</a>
+<div class="page-navigation">
+    <ul class="pagination justify-content-center">
+        {% if page.has_previous %}
+            <li>
+                <a class="btn btn-outline-info my-2 mr-1" href="?page=1">First</a>
+            </li>
+            <li>
+                <a class="btn btn-outline-info my-2 mr-1" href="?page={{ page.previous_page_number }}">Previous</a>
+            </li>
         {% endif %}
-    {% endfor %}
-
-    {% if page.has_next %}
-        <a class="btn btn-outline-info my-2 mr-1" href="?page={{ page.next_page_number }}">Next</a>
-        <a class="btn btn-outline-info my-2 mr-1" href="?page={{ page.paginator.num_pages }}">Last</a>
-    {% endif %}
+        {% for num in page.paginator.page_range %}
+            {% if page.number == num %}
+            <li>
+                <a class="btn btn-info my-2 mr-1" href="?page={{ num }}">{{ num }}</a>
+            </li>
+            {% elif num > page.number|add:'-3' and num < page.number|add:'3' %}
+                <li>
+                    <a class="btn btn-outline-info my-2 mr-1" href="?page={{ num }}">{{ num }}</a>
+                </li>
+            {% endif %}
+        {% endfor %}
+        {% if page.has_next %}
+        <li>
+            <a class="btn btn-outline-info my-2 mr-1" href="?page={{ page.next_page_number }}">Next</a>
+        </li>
+        <li>
+            <a class="btn btn-outline-info my-2 mr-1" href="?page={{ page.paginator.num_pages }}">Last</a>
+        </li>
+        {% endif %}
+    </ul>
 </div>
