--- a/base/static/style.css
+++ b/base/static/style.css
@@ -107,6 +107,7 @@ a.post-edit:hover {
     border: 1px solid #4A545E;
     border-radius: 3px;
     padding-top: 15px;
+    margin-bottom: 10px;
 }
 
 .accounts-profile-pic {
@@ -115,7 +116,9 @@ a.post-edit:hover {
 }
 
 .username,
-.fullname{
+.fullname,
+.btn-group > .btn:first-child,
+.btn-group > .btn:last-child {
     font-weight: bold;
 }
 
@@ -135,6 +138,19 @@ a.post-edit:hover {
 legend {
     border-bottom: 1px solid #A9B3BC;
 }
+
+.btn-group > .btn:first-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+    opacity: 0.7;
+}
+
+.btn-group > .btn:last-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    opacity: 1;
+}
+
 
 /******************* #Responsiveness# ******************/
 h1 { font-size: 1.8rem; }
