--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block title %}
     Home
@@ -58,3 +59,6 @@
         </div>
     </div>
 {% endblock content %}
+{% block scripts %}
+    <script src="{% static 'main.js' %}"></script>
+{% endblock scripts %}
