--- a/posts/templates/posts/view_post.html
+++ b/posts/templates/posts/view_post.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block title %}
     {{ post.title }}
@@ -40,4 +41,8 @@
             </ul>
         </div>
     </div>
+    {% block scripts %}
+        <script src="{% static 'posts/main.js' %}"></script>
+    {% endblock scripts %}
 {% endblock content %}
+
